--- a/app/index.html
+++ b/app/index.html
@@ -7,9 +7,19 @@
   <title>Document</title>
 </head>
 
-
-
 <body>
-  
+    <h1>This is my fucking webpage</h1>
+    <p id="operand1">Operand #1: </p>
+    <p id="operand2">Operand #2: </p>
+    
+    
+    <p id="greeting"></p>
+
+    <p id="sum"></p> 
+    <p id="subtract"></p>
+    <p id="multiply"></p>
+    <p id="division"></p>
+    <p id="modulus"></p>   
+<script src="scripts/scripts.js"></script>  
 </body>
 </html>
